# async-tts-pipeline

./: .env.example  README.md  main.py  pyproject.toml  test_frontend.html
app/: logging_wrapper.py  prompts.py
app/objects/: EventQueue.py  types.py
app/services/: TTS_service.py  listener_service.py  stream_service.py
app/test_scripts/: test_stream.py
app/utils/: batching.py  exception_handler.py
