[project]
name = "fastapiproject"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "elevenlabs>=2.53.0",
    "fastapi>=0.137.1",
    "ffmpeg-downloader>=0.5.2",
    "gradio>=6.19.0",
    "imageio-ffmpeg>=0.6.0",
    "numpy>=2.4.6",
    "pydub>=0.25.1",
    "scipy>=1.18.0",
    "uvicorn>=0.49.0",
    "websockets>=16.0",
]
